Some fix on mobile

--- a/source/stylesheets/_beeconnect.sass
+++ b/source/stylesheets/_beeconnect.sass
@@ -36,6 +36,7 @@ section.header
   +media($mobile)
     min-height: 555px
     overflow: hidden
+    +padding(28px null null)
 
   & + section
     background: white
@@ -136,7 +137,7 @@ blockquote
       +media($mobile)
         text-align: center
         font-size: rem(20)
-        line-height: rem(24)
+        line-height: rem(34)
 
     h2
       @extend %subtitle
